🧪 Switch to containerless `actionlint`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,6 @@
 
 ci:
   autoupdate_schedule: quarterly
-  skip:
-  - actionlint-docker
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -136,7 +134,7 @@ repos:
 - repo: https://github.com/rhysd/actionlint.git
   rev: v1.7.7
   hooks:
-  - id: actionlint-docker
+  - id: actionlint
     args:
     - -ignore
     - >-  # https://github.com/rhysd/actionlint/issues/384
