Explicitly notify Codecov about upload completion
This patch add an additional invocation of Codecov CLI that tells the
backend that we're done uploading. It is supposed to stop Codecov from
guessing whether to wait for more uploads for the CI or start
processing them already.

Upstream refs:
* https://docs.codecov.com/docs/cli-options#send-notifications
* https://docs.codecov.com/docs/notifications#preventing-notifications-until-youre-ready-to-send-notifications
* https://docs.codecov.com/docs/codecovyml-reference#codecovnotifymanual_trigger
* https://github.com/codecov/codecov-cli/pull/195 (https://github.com/getsentry/prevent-cli/commit/d634ebd8f21d2880df12f002d83afa499652ea25)
* https://github.com/codecov/codecov-action/issues/1436
* https://github.com/codecov/engineering-team/issues/107
* https://github.com/codecov/roadmap/issues/20
* https://github.com/codecov/feedback/discussions/204#discussioncomment-8796433
* https://github.com/codecov/engineering-team/issues/1245
* https://github.com/codecov/engineering-team/issues/3
* https://github.com/codecov/worker/pull/14 (https://github.com/codecov/umbrella/commit/71626b6368a880d92f1d611917e6ec08598ef26b)

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -2,8 +2,7 @@
 
 codecov:
   notify:
-    after_n_builds: 23  # The number of test matrix+lint jobs uploading coverage
-    wait_for_ci: false
+    manual_trigger: true  # prevent notifications until we notify Codecov
 
   require_ci_to_pass: false
 
