--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -484,6 +484,25 @@ jobs:
         run: python -Im pytest --no-cov -vvvvv --codspeed
         mode: instrumentation
 
+  coverage-summary:
+    name: Coverage processing
+    if: >-
+      !cancelled()
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    needs:
+    - lint
+    - test
+    steps:
+    - name: Notify Codecov that all coverage reports have been uploaded
+      if: >-
+        !cancelled()
+      uses: codecov/codecov-action@v5
+      with:
+        fail_ci_if_error: true
+        run_command: send-notifications
+        token: ${{ secrets.CODECOV_TOKEN }}
+
   test-summary:
     name: Test matrix status
     if: always()
