--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,16 +12,42 @@ repos:
   rev: v1.5.0
   hooks:
   - id: yesqa
+    exclude: ^packaging/pep517_backend/.+$
     additional_dependencies:
     - wemake-python-styleguide
+- repo: https://github.com/astral-sh/ruff-pre-commit.git
+  rev: v0.13.3
+  hooks:
+  - id: ruff-format  # Cython imports are handled by `isort`
+    alias: ruff-format-first-pass
+    name: ruff-format | PEP 517 backend (first pass)
+    files: ^packaging/pep517_backend/.+$
+
+- repo: https://github.com/asottile/add-trailing-comma.git
+  rev: v3.2.0
+  hooks:
+  - id: add-trailing-comma
+    name: Add trailing commas | PEP 517 backend
+    files: ^packaging/pep517_backend/.+$
+
+- repo: https://github.com/astral-sh/ruff-pre-commit.git
+  rev: v0.13.3
+  hooks:
+  - id: ruff-format  # Cython imports are handled by `isort`
+    alias: ruff-format-second-pass
+    name: ruff-format | PEP 517 backend (second pass)
+    files: ^packaging/pep517_backend/.+$
+
 - repo: https://github.com/PyCQA/isort
   rev: '6.0.1'
   hooks:
   - id: isort
+    exclude: ^packaging/pep517_backend/.+$
 - repo: https://github.com/psf/black
   rev: '25.1.0'
   hooks:
   - id: black
+    exclude: ^packaging/pep517_backend/.+$
     language_version: python3  # Should be a command that runs python
 
 - repo: https://github.com/python-jsonschema/check-jsonschema.git
@@ -73,6 +99,7 @@ repos:
   hooks:
   - id: pyupgrade
     args: ['--py39-plus']
+    exclude: ^packaging/pep517_backend/.+$
 - repo: https://github.com/PyCQA/flake8
   rev: '7.3.0'
   hooks:
