📦 Include in-tree cache keys action into sdist
This is needed for GHA testing to be able to run from tarballs.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include LICENSE
 include NOTICE
 include CHANGES.rst
 include README.rst
+graft .github/actions/
 graft yarl
 graft packaging
 graft docs
