🧪🩹 Add a Git repo into the Codspeed job
It is currently unable to retrieve the commit details from GitHub-set
environment variables.

Ref: https://github.com/CodSpeedHQ/runner/issues/144

--- a/.github/workflows/reusable-codspeed.yml
+++ b/.github/workflows/reusable-codspeed.yml
@@ -74,6 +74,12 @@ jobs:
     runs-on: ${{ inputs.runner-vm-os }}
     timeout-minutes: ${{ inputs.timeout-minutes }}
     steps:
+    - name: Retrieve the project source from Git to please Codspeed runner
+      # NOTE: Codspeed is incapable of getting repo details from CI environment
+      # Ref: https://github.com/CodSpeedHQ/runner/issues/144
+      uses: actions/checkout@v5
+      with:
+        depth: 1  # Codspeed only checks the HEAD
     - name: Retrieve the project source from an sdist inside the GHA artifact
       uses: re-actors/checkout-python-sdist@release/v2
       with:
