🧪Skip aiohttp workflow on edits to codspeed one

--- a/.github/workflows/aiohttp.yml
+++ b/.github/workflows/aiohttp.yml
@@ -8,11 +8,15 @@ on:
   push:
     branches:
     - master
+    paths-ignore:
+    - .github/workflows/reusable-codspeed.yml
     tags:
     - v*
   pull_request:
     branches:
     - master
+    paths-ignore:
+    - .github/workflows/reusable-codspeed.yml
 
 
 env:
